# turinginterpreter

./: Readme.md  stack.yaml  turinginterpreter.cabal
app/: Main.hs  Repl.hs
machines/: and  busybeaver-2  busybeaver-3  busybeaver-4  busybeaver-5  copy  or  xor
src/Turing/: Interpreter.hs  Machine.hs  Parser.hs
