name:                turinginterpreter
version:             0.1.0.0
synopsis:            A simple Turing Machine simulator, and an esolang.
homepage:            https://github.com/githubuser/turinginterpreter#readme
license:             GPL-3
license-file:        COPYING
author:              Kaan Genç
maintainer:          kaan@kaangenc.me
copyright:           2016 Kaan Genç
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Turing.Parser
                     , Turing.Machine
                     , Turing.Interpreter
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
  ghc-options:         -fno-warn-unused-do-bind
  default-language:    Haskell2010

executable turinginterpreter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turinginterpreter
                     , megaparsec
                     , extra
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SeriousBug/turinginterpreter
